improved columns functioning and their storage in the table